# juce-cmp

./: .gitignore  AI_CONTEXT.md  CMakeLists.txt  README.md  TODO  TODO.md  TODO.txt  ai_context
common/: ui_protocol.h
demo/: CMakeLists.txt  LoadingPreview.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
demo/scripts/: build.sh  generate_loading_preview.sh
demo/ui/: settings.gradle.kts
demo/ui/composeApp/: build.gradle.kts
demo/ui/composeApp/src/jvmMain/kotlin/juce_cmp/demo/: App.kt
demo/ui/composeApp/src/main/kotlin/juce_cmp/demo/: ParameterState.kt  UserInterface.kt  main.kt
docs/: mac-notes.md
host/: CMakeLists.txt  iosurface_ipc.m  iosurface_provider.h  main.m
juce/: CMakeLists.txt  IOSurfaceComponent.h  IOSurfaceComponent.mm  IOSurfaceProvider.h  IOSurfaceProvider.mm  InputSender.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
juce/bridge/: IOSurfaceComponent.h  IOSurfaceComponent.mm  IOSurfaceProvider.h  IOSurfaceProvider.mm  InputSender.cpp  InputSender.h  UIReceiver.h
juce_cmp/: juce_cmp.cpp  juce_cmp.h  juce_cmp.mm
juce_cmp/juce_cmp/: ChildProcess.cpp  ChildProcess.h  ComposeComponent.cpp  ComposeComponent.h  ComposeComponent.mm  ComposeProvider.cpp  ComposeProvider.h  ComposeProvider.mm  EventReceiver.h  IOSurfaceComponent.h  IOSurfaceComponent.mm  IOSurfaceProvider.h  IOSurfaceProvider.mm  InputSender.cpp  InputSender.h  Ipc.cpp  Ipc.h  LoadingPreview.h  MachPort.h  MachPort.mm  MachPortIPC.h  MachPortIPC.mm  Surface.h  Surface.mm  SurfaceView.h  SurfaceView.mm  UIReceiver.h  input_event.h  input_protocol.h  ipc_protocol.h
juce_cmp_ui/lib/src/jvmMain/kotlin/juce_cmp/: ParameterState.kt
juce_cmp_ui/lib/src/jvmMain/kotlin/juce_cmp/input/: InputDispatcher.kt  InputEvent.kt
juce_cmp_ui/lib/src/main/cpp/: iosurface_renderer.m
juce_cmp_ui/lib/src/main/kotlin/juce_cmp/: Library.kt
juce_cmp_ui/lib/src/main/kotlin/juce_cmp/events/: EventReceiver.kt  EventSender.kt
juce_cmp_ui/lib/src/main/kotlin/juce_cmp/input/: InputDispatcher.kt  InputEvent.kt  InputMapper.kt
juce_cmp_ui/lib/src/main/kotlin/juce_cmp/ipc/: Ipc.kt  IpcProtocol.kt  JuceValueTree.kt
juce_cmp_ui/lib/src/main/kotlin/juce_cmp/renderer/: IOSurfaceFramework.kt  IOSurfaceRenderer.kt  IOSurfaceRendererGPU.kt  IOSurfaceRendererImpl.kt
scripts/: build.sh  install.sh  run.sh  run_demo.sh  run_juce.sh  run_only_ui.sh
standalone/: CMakeLists.txt  main.m
ui/: settings.gradle.kts
ui/composeApp/: build.gradle.kts
ui/composeApp/src/jvmMain/cpp/: build.sh  iosurface_renderer.c  iosurface_renderer.m  iosurfacerenderer.c
ui/composeApp/src/jvmMain/kotlin/cmpui/: App.kt  Greeting.kt  Platform.kt  main.kt
ui/composeApp/src/jvmMain/kotlin/cmpui/bridge/: UISender.kt
ui/composeApp/src/jvmMain/kotlin/cmpui/bridge/input/: InputReceiver.kt
ui/composeApp/src/jvmMain/kotlin/cmpui/bridge/renderer/: IOSurfaceRendererCPU.kt  IOSurfaceRendererGPU.kt
ui/composeApp/src/jvmMain/kotlin/cmpui/input/: InputDispatcher.kt  InputEvent.kt  InputMapper.kt  InputReceiver.kt
ui/composeApp/src/jvmMain/kotlin/cmpui/renderer/: IOSurfaceLib.kt  IOSurfaceRenderer.kt  IOSurfaceRendererCPU.kt  IOSurfaceRendererGPU.kt
ui/composeApp/src/jvmMain/kotlin/cmpui/widgets/: Knob.kt
ui/composeApp/src/jvmMain/kotlin/com/lucianoiam/kmpui/: App.kt  Greeting.kt  IOSurfaceRenderer.kt  Platform.kt  main.kt
ui/composeApp/src/jvmMain/kotlin/kmpui/: IOSurfaceLib.kt  IOSurfaceRenderer.kt  IOSurfaceRendererCPU.kt  IOSurfaceRendererGPU.kt  main.kt
ui/composeApp/src/jvmMain/kotlin/kmpui/renderer/: IOSurfaceLib.kt  IOSurfaceRenderer.kt  IOSurfaceRendererCPU.kt  IOSurfaceRendererGPU.kt
ui/composeApp/src/jvmMain/resources/: iosurfacerenderer.dylib  libiosurface_renderer.dylib
